--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,18 +18,17 @@ h6 {
 body {
   padding: 0;
   font-family: 'Raleway', sans-serif;
+  background-color: #e8e8e8;
 }
 
 #prev, #next {
   position: absolute;
-  width: 50px;
-  height: 50px;
-  border: 1px solid #aaa;
-  background-color: #dca;
-  color: white;
+  width: 30px;
+  height: 30px;
+  color: black;
   z-index: 10;
-  font-size: 40px;
-  line-height: 45px;
+  font-size: larger;
+  line-height: 30px;
   text-align: center;
   font-family: Helvetica, sans-serif;
   cursor: pointer;
@@ -37,8 +36,7 @@ body {
 }
 
 #prev:hover, #next:hover {
-  background-color: #ba9;
-  border: 1px solid #999;
+  color: green;
 }
 
 #navigation {
@@ -60,7 +58,7 @@ body {
 
 .container {
   width: 100vw;
-  height: 100vh;
+  height: 90vh;
 }
 
 .zoomContainer {
@@ -80,76 +78,58 @@ body {
   margin-top: 1em;
 }
 
+.polaroid-outer {
+  background-color: #ffffff;
+  width: 130px;
+  height: 150px;
+  padding: 5px 5px 25px 5px;
+}
+
+.polaroid-inner {
+  background-color: #000000;
+  width: 100%;
+  height: 100%;
+}
 
 .item1 {
-  background-color: #ff9812;
   position: absolute;
   left: 50px;
   top: 50px;
-  width: 300px;
-  height: 200px;
-
 }
 
 .item2 {
-  background-color: #ffee62;
   position: absolute;
   bottom: 40px;
   right: 40px;
-  width: 300px;
-  height: 200px;
-  border: 1px solid #ffee62;
 }
 
 .item3 {
-  background-color: #f9e88c;
   position: absolute;
   top: 0px;
   right: 100px;
-  width: 300px;
-  height: 200px;
-  border: 1px solid #f9e88c;
-  -webkit-transform: rotate(10deg) translate(0px, 0px);
-  -moz-transform: rotate(10deg) translate(0px, 0px);
-  -o-transform: rotate(10deg) translate(0px, 0px);
+  -webkit-transform: rotate(35deg);
+  -moz-transform: rotate(35deg);
+  -o-transform: rotate(35deg);
 }
 
 .item3b {
-  background-color: #ffc413;
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 200px;
-  height: 100px;
-  border: 1px solid ffc413;
   -webkit-transform: rotate(10deg) translate(200px, 200px);
   -moz-transform: rotate(10deg) translate(200px, 200px);
   -o-transform: rotate(10deg) translate(200px, 200px);
 }
 
 .item2b {
-  background-color: #ff9c4e;
   position: absolute;
   bottom: 80px;
   right: 80px;
-  width: 100px;
-  height: 100px;
-  border: 1px solid ff9c4e;
 }
 
 .item4 {
-  background-color: #ffc;
   position: absolute;
   bottom: 320px;
   left: 150px;
-  width: 200px;
-  height: 200px;
-  border: 1px solid yellow;
-  -webkit-transform: rotate(27deg) skew(28deg);
-  -moz-transform: rotate(30deg) skew(20deg);
-  -o-transform: rotate(30deg) skew(20deg);
+
 }
-
-
-
-@import "print";
