--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -91,6 +91,11 @@ body {
   height: 100%;
 }
 
+.polaroid-image {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .item1 {
   position: absolute;
   left: 50px;
