--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,8 +2,9 @@
     <div id="container" class="zoomContainer">
         <zoom-target content='{{picture}}' ng-repeat='picture in pictures'></zoom-target>
     </div>
+
+        <!--<div id="prev" class="zoomButton" data-type="prev" data-root=".zoomViewport">&lt;</div>-->
+        <!--<div id="next" class="zoomButton" data-type="next" data-root=".zoomViewport">&gt;</div>-->
+
 </div>
-<div id="navigation">
-    <div id="prev" class="zoomButton" data-type="prev" data-root=".zoomViewport">&lt;</div>
-    <div id="next" class="zoomButton" data-type="next" data-root=".zoomViewport">&gt;</div>
-</div>
+
