--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,32 +33,24 @@ body {
   font-family: Helvetica, sans-serif;
   cursor: pointer;
   cursor: hand;
+  bottom:30px;
 }
 
 #prev:hover, #next:hover {
   color: green;
 }
 
-#navigation {
-  width: 800px;
-  position: relative;
-  margin-top: 2em;
-  margin-left: auto;
-  margin-right: auto;
-  height: 70px;
-}
-
 #prev {
-  left: 0px;
+  left: 40%;
 }
 
 #next {
-  right: 0px;
+  right: 40%;
 }
 
 .container {
   width: 100vw;
-  height: 90vh;
+  height: 100vh;
 }
 
 .zoomContainer {
@@ -80,8 +72,8 @@ body {
 
 .polaroid-outer {
   background-color: #ffffff;
-  width: 130px;
-  height: 150px;
+  width: 170px;
+  height: 110px;
   padding: 5px 5px 25px 5px;
 }
 
@@ -96,45 +88,4 @@ body {
   max-height: 100%;
 }
 
-.item1 {
-  position: absolute;
-  left: 50px;
-  top: 50px;
-}
 
-.item2 {
-  position: absolute;
-  bottom: 40px;
-  right: 40px;
-}
-
-.item3 {
-  position: absolute;
-  top: 0px;
-  right: 100px;
-  -webkit-transform: rotate(35deg);
-  -moz-transform: rotate(35deg);
-  -o-transform: rotate(35deg);
-}
-
-.item3b {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  -webkit-transform: rotate(10deg) translate(200px, 200px);
-  -moz-transform: rotate(10deg) translate(200px, 200px);
-  -o-transform: rotate(10deg) translate(200px, 200px);
-}
-
-.item2b {
-  position: absolute;
-  bottom: 80px;
-  right: 80px;
-}
-
-.item4 {
-  position: absolute;
-  bottom: 320px;
-  left: 150px;
-
-}
