--- a/client/app/styles.scss
+++ b/client/app/styles.scss
@@ -72,13 +72,12 @@ body {
 
 .polaroid-outer {
   background-color: #ffffff;
-  width: 170px;
-  height: 110px;
-  padding: 5px 5px 25px 5px;
+  //width: 150px;
+  //height: 100px;
+  padding: 5px 5px 30px 5px;
 }
 
 .polaroid-inner {
-  background-color: #000000;
   width: 100%;
   height: 100%;
 }
