--- a/client/app/styles.scss
+++ b/client/app/styles.scss
@@ -1,4 +1,6 @@
 
+@import url(http://fonts.googleapis.com/css?family=Wire+One);
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -17,7 +19,10 @@ h6 {
 
 body {
   padding: 0;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Wire One', sans-serif;
+  font-size: x-small;
+  font-weight: bold;
+  letter-spacing: 1px;
   background-color: #e8e8e8;
 }
 
@@ -76,8 +81,31 @@ body {
 }
 
 .polaroid-inner {
+  position: relative;
   width: 100%;
   height: 100%;
+}
+
+.overlay {
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 70%;
+  padding-left: 10px;
+  padding-right: 10px;
+  z-index: 3;
+  overflow-x: scroll;
+  background: rgba(0, 0, 0, 0.7);
+  color: #ffffff;
+  opacity:0;
+  transition:visibility 0s linear 0.3s,opacity 0.3s linear;
+}
+
+.overlay-visible {
+  visibility: visible;
+  opacity: 1;
+  transition-delay:0s;
 }
 
 .polaroid-image {
