--- a/client/app/styles.scss
+++ b/client/app/styles.scss
@@ -1,5 +1,5 @@
 
-@import url(http://fonts.googleapis.com/css?family=Wire+One);
+@import url(https://fonts.googleapis.com/css?family=Wire+One);
 
 .browsehappy {
   margin: 0.2em 0;
@@ -8,14 +8,6 @@
   padding: 0.2em 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Varela Round', sans-serif;
-}
 
 body {
   padding: 0;
@@ -24,33 +16,6 @@ body {
   font-weight: bold;
   letter-spacing: 1px;
   background-color: #e8e8e8;
-}
-
-#prev, #next {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  color: black;
-  z-index: 10;
-  font-size: larger;
-  line-height: 30px;
-  text-align: center;
-  font-family: Helvetica, sans-serif;
-  cursor: pointer;
-  cursor: hand;
-  bottom:30px;
-}
-
-#prev:hover, #next:hover {
-  color: green;
-}
-
-#prev {
-  left: 40%;
-}
-
-#next {
-  right: 40%;
 }
 
 .container {
@@ -99,7 +64,7 @@ body {
   background: rgba(0, 0, 0, 0.7);
   color: #ffffff;
   opacity:0;
-  transition:visibility 0s linear 0.3s,opacity 0.3s linear;
+  transition:visibility 0s linear 0.2s,opacity 0.2s linear;
 }
 
 .overlay-visible {
@@ -115,5 +80,5 @@ body {
 
 // Component styles are injected through grunt
 // injector
-
+@import 'buttons.scss';
 // endinjector
