--- a/client/app/styles.scss
+++ b/client/app/styles.scss
@@ -12,8 +12,6 @@
 body {
   padding: 0;
   font-family: 'Wire One', sans-serif;
-  font-size: x-small;
-  font-weight: bold;
   letter-spacing: 1px;
   background-color: #e8e8e8;
 }
@@ -43,6 +41,18 @@ body {
 .polaroid-outer {
   background-color: #ffffff;
   padding: 5px 5px 30px 5px;
+  opacity: 1;
+
+}
+
+.polaroid-outer.ng-enter {
+  opacity: 0;
+  -webkit-transition:opacity ease 3s;
+  transition:opacity ease 3s;
+}
+
+.polaroid-outer.ng-enter-active {
+  opacity:1;
 }
 
 .polaroid-inner {
@@ -64,6 +74,8 @@ body {
   background: rgba(0, 0, 0, 0.7);
   color: #ffffff;
   opacity:0;
+  font-size: x-small;
+  font-weight: bold;
   transition:visibility 0s linear 0.2s,opacity 0.2s linear;
 }
 
@@ -78,7 +90,10 @@ body {
   max-height: 100%;
 }
 
+
 // Component styles are injected through grunt
 // injector
 @import 'buttons.scss';
 // endinjector
+
+@import "../bower_components/angular-loader-directive/src/scss/loader";
