--- a/client/app/styles.scss
+++ b/client/app/styles.scss
@@ -41,18 +41,9 @@ body {
 .polaroid-outer {
   background-color: #ffffff;
   padding: 5px 5px 30px 5px;
-  opacity: 1;
-
-}
-
-.polaroid-outer.ng-enter {
   opacity: 0;
-  -webkit-transition:opacity ease 3s;
-  transition:opacity ease 3s;
-}
-
-.polaroid-outer.ng-enter-active {
-  opacity:1;
+  -webkit-transition:opacity linear .7s;
+  transition:opacity linear .7s;
 }
 
 .polaroid-inner {
